# gum-train

./: .gitignore  README.md  describe.py  gendocs.py  generate.py  process.py  render.py  synthetic.py  train.py
data/: train.jsonl  train.md
environments/gum/: client.py  environ.py  gum.py  pyproject.toml
environments/gumgen/: README.md  gumgen.py  pyproject.toml
train_testing/: unsloth_grpo.py
